<resources>
    <string name="app_name">Course Tracker</string>
    <string name="title_activity_term_list">TermListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_term">TermActivity</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="termtitle">TermTitle</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="nda">No Data Available</string>
    <string name="title_activity_assessment">AssessmentActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>

    <string name="course_name">Course Name</string>
    <string name="status">Status:</string>

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="add_term">Add Term</string>
    <string name="assessments">Assessments:</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="snack_bar_text">Deleted!</string>
    <string name="add_course">Add Course</string>
    <string name="notes">Notes:</string>
    <string name="courses">Courses:</string>
    <string name="name">Name</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="assessment_date">Assessment Date</string>
    <string name="save">Save</string>
    <string name="course">Course:</string>
    <string name="assesment_type">Assesment Type:</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="set_a_reminder">Set A Reminder</string>

    <string name="channel_name">channel</string>
    <string name="channel_description">channel description</string>
</resources>