<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_marginBottom="4dp"
    android:background="@color/darkListItemBG">

    <TextView
        android:id="@+id/courseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/course_name"
        android:textColor="#EFEFEF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/start"
        android:textColor="#EFEFEF"
        app:layout_constraintStart_toStartOf="@+id/courseTitle"
        app:layout_constraintTop_toBottomOf="@+id/courseTitle" />

    <TextView
        android:id="@+id/endDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/end"
        android:textColor="#EFEFEF"
        app:layout_constraintEnd_toEndOf="@+id/startDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/startDateLabel" />

    <TextView
        android:id="@+id/courseStartDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/textview"
        android:textColor="#EFEFEF"
        app:layout_constraintBottom_toBottomOf="@+id/startDateLabel"
        app:layout_constraintStart_toEndOf="@+id/startDateLabel"
        app:layout_constraintTop_toTopOf="@+id/startDateLabel" />

    <TextView
        android:id="@+id/courseEndDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/textview"
        android:textColor="#EFEFEF"
        app:layout_constraintBottom_toBottomOf="@+id/endDateLabel"
        app:layout_constraintStart_toEndOf="@+id/endDateLabel"
        app:layout_constraintTop_toTopOf="@+id/endDateLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>