<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"

android:layout_width="match_parent"
android:layout_height="match_parent">

<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbar"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/courseDetailToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/abc_vector_test"></androidx.appcompat.widget.Toolbar>

</com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/termDetailFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#232323">

        <TextView
            android:id="@+id/StartLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="#F8F8F8"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="72dp" />

        <TextView
            android:id="@+id/EndLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/end"
            android:textColor="#F8F8F8"
            app:layout_constraintEnd_toEndOf="@+id/StartLabel"
            app:layout_constraintTop_toBottomOf="@+id/StartLabel" />

        <TextView
            android:id="@+id/termStartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/textview"
            android:textColor="#F8F8F8"
            app:layout_constraintBottom_toBottomOf="@+id/StartLabel"
            app:layout_constraintStart_toEndOf="@+id/StartLabel"
            app:layout_constraintTop_toTopOf="@+id/StartLabel" />

        <TextView
            android:id="@+id/termEndTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/textview"
            android:textColor="#F8F8F8"
            app:layout_constraintBottom_toBottomOf="@+id/EndLabel"
            app:layout_constraintStart_toEndOf="@+id/EndLabel"
            app:layout_constraintTop_toTopOf="@+id/EndLabel" />

        <TextView
            android:id="@+id/courseStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/status"
            android:textColor="#F8F8F8"
            app:layout_constraintEnd_toEndOf="@+id/EndLabel"
            app:layout_constraintTop_toBottomOf="@+id/EndLabel" />

        <TextView
            android:id="@+id/courseStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/textview"
            android:textColor="#F8F8F8"
            app:layout_constraintBottom_toBottomOf="@+id/courseStatusLabel"
            app:layout_constraintStart_toEndOf="@+id/courseStatusLabel"
            app:layout_constraintTop_toTopOf="@+id/courseStatusLabel" />

        <TextView
            android:id="@+id/CourseNotesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/notes"
            android:textColor="#F8F8F8"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/courseStatusLabel"
            app:layout_constraintTop_toBottomOf="@+id/courseStatusLabel" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/CourseNotesLabel">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/courseNoteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/lorem"
                    android:textColor="#E6E6E6"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/termCoursesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/assessments"
            android:textColor="#D3D3D3"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/CourseNotesLabel"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/termCourseRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termCoursesLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/editTermFAB"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="16dp"
    android:src="@drawable/ic_baseline_add_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>