<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="155dp">

    <TextView
        android:id="@+id/termTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/termtitle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="@+id/termTitle"
        app:layout_constraintTop_toBottomOf="@+id/termTitle" />

    <TextView
        android:id="@+id/endDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/end"
        app:layout_constraintEnd_toEndOf="@+id/startDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/startDateLabel" />

    <TextView
        android:id="@+id/termStartDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/startDateLabel"
        app:layout_constraintStart_toEndOf="@+id/startDateLabel"
        app:layout_constraintTop_toTopOf="@+id/startDateLabel" />

    <TextView
        android:id="@+id/termEndDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/endDateLabel"
        app:layout_constraintStart_toEndOf="@+id/endDateLabel"
        app:layout_constraintTop_toTopOf="@+id/endDateLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>